# topozarr

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TODO.md  mkdocs.yml  pyproject.toml
.github/workflows/: build-demo-data.yml  ci.yml  docs.yml  lint.yml  publish.yml  rust.yml
core/: Cargo.toml  README.md  pyproject.toml  topozarr_core.pyi
core/src/: lib.rs  writer.rs
docs/: api.md  contributing.md  design.md  index.md  usage.md
docs/stylesheets/: extra.css
scripts/: build_demo_data.py
src/topozarr/: __init__.py  chunking.py  coarsen.py  engine.py  geozarr.py  metadata.py  pyramid.py  rust_io.py  write.py
tests/: conftest.py  test_chunking.py  test_engine.py  test_geozarr.py  test_hypothesis.py  test_pyramid.py  test_rust_io.py  test_sparse_factors.py  test_specs.py  test_write.py
