[project]
name = "topozarr"
version = "0.0.6"
description = "Lightweight multiscale zarr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dask>=2025.12.0",
    "flox",
    "xarray>=2025.9.0",
    "xproj>=0.2.1",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"


[project.optional-dependencies]
tutorial = [
    "dask",
    "icechunk",
    "netcdf4",
    "obstore",
    "pooch",
    "zarr",
]
demo = [
    "boto3",
    "click",
    "cloudpathlib[s3]",
    "dask",
    "h5netcdf",
    "icechunk>=1.1.19",
    "obstore",
    "virtualizarr",
    "zarr",
]

[dependency-groups]
test = [
    "hypothesis>=6.150.0",
    "ipdb>=0.13.13",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.11",
]
conformance = [
    "geozarr-toolkit>=0.1.1",
    {include-group = "test"},
]

[tool.pytest.ini_options]
markers = [
    "conformance: validate against external spec tools (may be skipped with -m 'not conformance')",
]

[tool.uv.sources]
virtualizarr = { git = "https://github.com/zarr-developers/VirtualiZarr" }
