[project]
name = "topozarr"
version = "0.0.9"
description = "Lightweight multiscale zarr"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pyproj",
    "topozarr-core>=0.1.0,<0.2",
    "xarray>=2025.9.0",
    "xproj>=0.2.1",
    "zarr>=3.0.0",
]

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"


[project.optional-dependencies]
tutorial = [
    "icechunk",
    "netcdf4",
    "obstore",
    "pooch",
]
demo = [
    "boto3",
    "click",
    "cloudpathlib[s3]",
    "h5py",
    "h5netcdf",
    "icechunk>=1.1.19",
    "obstore",
    "virtualizarr",
    "zarr",
]

[dependency-groups]
test = [
    "boto3>=1.0",
    "hypothesis>=6.150.0",
    "icechunk>=1.1.19",
    "ipdb>=0.13.13",
    "moto[s3,server]>=5.0",
    "obstore>=0.9.1",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.11",
]
conformance = [
    "geozarr-toolkit>=0.1.1",
    {include-group = "test"},
]
docs = [
    "black>=26.5.1",
    "mkdocs-material>=9",
    "mkdocstrings[python]>=0.25",
]


[tool.pytest.ini_options]
markers = [
    "conformance: validate against external spec tools (may be skipped with -m 'not conformance')",
]

[tool.uv.sources]
virtualizarr = { git = "https://github.com/zarr-developers/VirtualiZarr" }
topozarr-core = { workspace = true }

[tool.uv.workspace]
members = ["core"]
