[project]
name = "topozarr-core"
version = "0.1.1"
description = "Block-reduction kernel for topozarr pyramid generation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numpy"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Repository = "https://github.com/carbonplan/topozarr"

[build-system]
requires = ["maturin>=1.7,<2"]
build-backend = "maturin"

[tool.maturin]
module-name = "topozarr_core"
features = ["pyo3/extension-module"]
